welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:3: error: identifier expected but string literal found.
var x:String=="getCouleursol()"
              ^