welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.code
getCouleurSol()
var x:String=="getCouleursol()"
while( x=="yellow") { avance();}
